# llm-pretrainer-data-parallel

./: .gitignore  README.md  dataloader.py  model.py  notes.md  pyproject.toml  train.py  utils.py
scripts/: setup.sh
