[project]
name = "llm-pretrainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "flash-attn==2.7.4.post1",
    "lovely-tensors>=0.1.20",
    "numpy>=2.0.0,<2.5.0",
    "psutil>=7.2.1",
    "torch==2.4.1",
    "transformers>=4.44.0",
    "wandb>=0.18.0",
]
